# NASA-Landsat

./: .gitignore  Dockerfile  README.md  app.py  build.sh  example.env  mailer.py  pyproject.toml  requirements.txt  run.sh
data/: landsat8.tle.txt
landsat_parser/: LC08_L1GT_114214_20240916_20240921_02_T2.geojson  LC08_L1GT_114214_20241002_20241002_02_RT.geojson  LC08_L1GT_115213_20240907_20240914_02_T2.geojson  LC08_L1GT_115213_20240923_20240928_02_T2.geojson  LC08_L1TP_020030_20240913_20240920_02_T1.geojson  LC08_L1TP_020030_20240929_20241005_02_T1.geojson  LC09_L1GT_114214_20240908_20240908_02_T2.geojson  LC09_L1GT_114214_20240924_20240924_02_T2.geojson  LC09_L1GT_115213_20240915_20240915_02_T2.geojson  LC09_L1GT_115213_20241001_20241001_02_T2.geojson  LC09_L1TP_020030_20240905_20240905_02_T1.geojson  LC09_L1TP_020030_20240921_20240921_02_T1.geojson  main.py  tiff_parser.py
landsat_parser/data/: .gitignore  tle.txt
landsat_webapp/: app.py  mailer.py
landsat_webapp/static/: styles.css
landsat_webapp/templates/: cloud_slider.html  drawer.html  index.html  index2.html  info_drawer.html  layout.html  login.html  register.html  styles.css
landsat_webapp/templates/drawer/: cloud_coverage.html  general_info.html  passover_predictions.html
landsatxplore/: earthexplorer.py  util.py
templates/: index.html  layout.html  register.html
