[tool.poetry]
name = "landsat-webapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
bcrypt = "^4.2.0"
flask-login = "^0.6.3"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
python-dateutil = "^2.9.0.post0"
shapely = "^2.0.6"
tqdm = "^4.66.5"
requests = "^2.32.3"
skyfield = "^1.49"
apscheduler = "^3.10.4"
flask-apscheduler = "^1.13.1"
rasterio = "^1.4.1"
gdal = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
